--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "hammerjs": "^2.0.8",
     "json-server": "^0.14.2",
     "node-sass": "^4.12.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
