--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "json-server": "^0.14.2",
+    "logger": "0.0.1",
     "node-sass": "^4.12.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.5.3",
